<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.nevada.nevadaapp.RatingReport">
    <Spinner
        android:id="@+id/spCustomers"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textColor="#f4383e"
        android:textStyle="normal|bold"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/gradient_spinner"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:spinnerMode="dropdown"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtFromDate"
            android:layout_height="wrap_content"
            android:layout_width="70dp"
            android:text="@string/from_date"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tranDateFromFilter"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/from_date"
            android:gravity="center"
            android:textColor="#802C2A"
            android:layout_gravity="center"
            android:onClick="callDate"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtToDate"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:text="@string/to_date"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tranDateToFilter"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/to_date"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#802C2A"
            android:onClick="callDate"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtRatingVal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/evaluation"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <!--android:layoutDirection="ltr"
        android:textDirection="ltr"-->
        <RatingBar
            android:id="@+id/repRatingBar"

            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SetOrder"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:isIndicator="false"
            android:numStars="5"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:stepSize="1"
            android:theme="@style/RatingBarS" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CFC6C8"
            android:text="@string/arrival_time_rating"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CFC6C8"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:text="@string/handle_the_driver_rating"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CFC6C8"
            android:text="@string/the_driver_form_rating"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/Access_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:textDirection="ltr"
            android:layout_weight=".6"

            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/inthesametime"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="10dp"
                android:text="@string/on_time_rating"

                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/latesome"
                android:drawableLeft="@drawable/radio"
                android:text="@string/delayed_slightly_rating"
                android:drawablePadding="10dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/late"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="10dp"
                android:text="@string/too_late"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />



        </RadioGroup>
        <RadioGroup
            android:id="@+id/dealing_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:textDirection="rtl"
            android:layout_weight=".75"

            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/dealing_good"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="10dp"
                android:text="@string/civil_rating"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableLeft="@drawable/radio"
                android:text="@string/fine_rating"
                android:id="@+id/dealing_goodMiddel"
                android:drawablePadding="10dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="10dp"
                android:text="@string/uncivil_rating"
                android:textSize="@dimen/textSize"
                android:id="@+id/dealing_not_good"

                android:textColor="@color/colorPrimaryDark" />



        </RadioGroup>




        <RadioGroup
            android:id="@+id/View_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight=".75"
            android:orientation="vertical"
            android:textDirection="rtl"

            >
            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/view_good"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="10dp"
                android:text="@string/seemly_rating"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:id="@+id/view_not_good"
                android:drawableLeft="@drawable/radio"
                android:text="@string/unseemly_rating"
                android:drawablePadding="10dp"
                android:textSize="@dimen/textSize"
                android:textColor="@color/colorPrimaryDark" />


        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btndelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_border_small"
            android:enabled="true"
            android:gravity="center"
            android:onClick="deleteSearsh"
            android:text="@string/bu_cancl"
            android:layout_margin="5dp"

            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRepSearch"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_border_small"
            android:enabled="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:onClick="SearchOrders"
            android:text="@string/search"
            android:textSize="15sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imgCurrentSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:src="@drawable/current_search" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:id="@+id/headerLayout"

        android:layout_below="@+id/ltHeaderData"
        android:background="@drawable/border_set">
        <TextView
            android:id="@+id/tranDebt"
            android:layout_height="wrap_content"
            android:layout_width="30dp"
            android:text="@string/information"
            android:gravity="left"
            android:textSize="@dimen/view_daily_row_text_size"

            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tranCredit"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/evaluation"
            android:gravity="left"
            android:textSize="@dimen/view_daily_row_text_size"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tranDate"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/customer_name"
            android:gravity="center"
            android:textSize="@dimen/view_daily_row_text_size"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:textColor="#ffffff"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tranType"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/Order_number"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/view_daily_row_text_size"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    <ListView
        android:id="@+id/lvSearchResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:layout_below="@+id/headerLayout"
        />

</LinearLayout>
