<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#ffffff"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.nevada.nevadaapp.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:weightSum="1">


            <ImageView
                android:id="@+id/logoCycle"
                android:layout_width="247dp"
                android:layout_height="156dp"
                android:src="@drawable/logo_cycle"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />


                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="User Name"
                    android:drawableLeft="@drawable/per"
                    android:textSize="14sp"
                    android:drawablePadding="2dp"
                    android:background="@drawable/login_back"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textSize="14sp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:drawableLeft="@drawable/per"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="2dp"
                    android:background="@drawable/login_back"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/action_sign_in"
                android:background="#d7d7d7"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
